--- a/Areas/Rider/Views/RiderDelivery/Details.cshtml
+++ b/Areas/Rider/Views/RiderDelivery/Details.cshtml
@@ -65,18 +65,19 @@
                     <h4>Farmer Shop Details</h4>
                     <p>Shop Name: @Model.ShopName</p>
                     <p>Shop Contract: @Model.ShopContract</p>
-                    <p>Shop Address: @Model.ShopAddress</p>
+                  
                 </div>
                 <div class="card" style="margin:10px">
                     <h4>Customer Details</h4>
                     <p>Customer Address: @Model.CustomerAddress</p>
                     <p>Delivery Address: @Model.DelivyAddress</p>
+                    <p>Phone : @Model.CustomerPhone</p>
                     <p>Payable Money: @Model.PayableMoney</p>
                 </div>
                 <div>
-                    <a class="btn btn-info" asp-area="Rider" asp-controller="RiderDelivery" asp-action="RunningDeliveries" style="margin-left:5px"> Running Delivary</a>
-                    <a class="btn btn-success" asp-area="Rider" asp-controller="RiderDelivery" asp-action="Index" style="margin-left:5px"> Manage Delivary</a>
-                    <a class="btn btn-primary" asp-area="Rider" asp-controller="RiderDelivery" asp-action="Index" style="margin-left:5px"> Confirm Delivary</a>
+                    <a class="btn btn-info" asp-area="Rider" asp-controller="RiderDelivery" asp-action="RunningDeliveries" style="margin:5px"> Running Delivary</a>
+                    <a class="btn btn-success" asp-area="Rider" asp-controller="RiderDelivery" asp-action="Index" style="margin:5px"> Manage Delivary</a>
+                    <a class="btn btn-primary" asp-area="Rider" asp-controller="RiderDelivery" asp-action="Index" style="margin:5px"> Confirm Delivary</a>
                 </div>
             </div>
             </div>
@@ -113,11 +114,11 @@
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
 
-        var shopLocation = [23.162718, 89.210788];
-        var deliveryLocation = [22.828455, 89.294137];
+    var shopLocation = [@Model.ShopLat, @Model.ShopLon];
+    var deliveryLocation = [@Model.DeliveryLat, @Model.DeliveryLon];
 
-        var shopMarker = L.marker(shopLocation, { icon: L.icon({ iconUrl: '/img/icon/shop.png', iconSize: [25, 41], iconAnchor: [12, 41], popupAnchor: [1, -34] }) }).addTo(map).bindPopup('Farmer Shop').openPopup();
-        var deliveryMarker = L.marker(deliveryLocation, { icon: L.icon({ iconUrl: '/img/icon/customer.png', iconSize: [25, 41], iconAnchor: [12, 41], popupAnchor: [1, -34] }) }).addTo(map).bindPopup('Customer Address').openPopup();
+        var shopMarker = L.marker(shopLocation, { icon: L.icon({ iconUrl: '/img/icon/shop.png', iconSize: [25, 41], iconAnchor: [12, 41], popupAnchor: [1, -34] }) }).addTo(map).bindPopup('FarmerShop').openPopup();
+        var deliveryMarker = L.marker(deliveryLocation, { icon: L.icon({ iconUrl: '/img/icon/customer.png', iconSize: [25, 41], iconAnchor: [12, 41], popupAnchor: [1, -34] }) }).addTo(map).bindPopup('Customer').openPopup();
 
         var riderLocation = null;
         var routingControl = null;
@@ -149,9 +150,9 @@
                     if (i === 0) {
                     return L.marker(wp.latLng, { icon: L.icon({ iconUrl: '/img/icon/delivary.png', iconSize: [25, 41], iconAnchor: [12, 41], popupAnchor: [1, -34] }) }).bindPopup('Rider');
                     } else if (i === 1) {
-                        return L.marker(wp.latLng, { icon: L.icon({ iconUrl: '/img/icon/shop.png', iconSize: [25, 41], iconAnchor: [12, 41], popupAnchor: [1, -34] }) }).bindPopup('Farmer Shop');
+                        return L.marker(wp.latLng, { icon: L.icon({ iconUrl: '/img/icon/shop.png', iconSize: [25, 41], iconAnchor: [12, 41], popupAnchor: [1, -34] }) }).bindPopup('FarmerShop');
                     } else {
-                        return L.marker(wp.latLng, { icon: L.icon({ iconUrl: '/img/icon/customer.png', iconSize: [25, 41], iconAnchor: [12, 41], popupAnchor: [1, -34] }) }).bindPopup('Customer Address');
+                        return L.marker(wp.latLng, { icon: L.icon({ iconUrl: '/img/icon/customer.png', iconSize: [25, 41], iconAnchor: [12, 41], popupAnchor: [1, -34] }) }).bindPopup('Customer');
                     }
                 }
             }).addTo(map);
