Footer update and layout edition for better view

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -262,7 +262,7 @@
                                 </div> *@
 
                             
-                                <div class="subscribe_form">
+                            @*     <div class="subscribe_form">
                                     <h3>Subscribe</h3>
                                     <form id="mc-form" class="mc-form footer-newsletter" method="post" action="#">
                                         <input type="email" name="EMAIL" id="mc-email" placeholder="Your email address..." />
@@ -273,11 +273,21 @@
                                             <div class="mailchimp-error"></div>
                                         </div>
                                     </form>
+                                </div> *@
+                                <div class="download-app ">
+                                    <div class="widgets_container widget_menu ">
+                                        <h3 style="text-align:center;margin-bottom:5px">Payment Methods</h3>
+                                    </div>
+                                   <br />
+                                    <img src="~/img/icon/payment methods.jpg" alt="image" />
                                 </div>
-                                <div class="download-app">
-                                    <h3>Payment Method</h3>
-                                    <img src="~/img/icon/payment.png" alt="image" />
+
+                                <div class="download-app ">
+                                 
+                                    <br />
+                                    <img src="~/img/icon/image_processing20200909-20748-f9rqiw.jpg" alt="image" style="height:150px; width:100%" />
                                 </div>
+                               
                             </div>
                         </div>
                     </div>
