--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,6 +1,9 @@
 ﻿@using System.Net.Http
 @using OnlineShop.Session
 @using Microsoft.AspNetCore.Http
+@using Microsoft.AspNetCore.Http.Extensions
+@using System.Globalization
+
 
 @inject IHttpContextAccessor HttpContextAccessor
 @{
@@ -114,16 +117,33 @@
                     <div class="col-lg-6">
                         <div class="top_right text-right">
                             <ul>
-                                <li class="language">
+                                <li>
                                     <a href="#">
-                                        <i class="zmdi zmdi-dribbble"></i> English
+                                        <i class="zmdi zmdi-dribbble"></i> @CultureInfo.CurrentCulture.TwoLetterISOLanguageName
                                         <i class="zmdi zmdi-caret-down"></i>
                                     </a>
                                     <ul class="dropdown_language">
-                                        <li><a href="#">English</a></li>
-                                        <li><a href="#">Bangla</a></li>
+                                        <li>
+                                            <a asp-area="Customer" asp-controller="Language" asp-action="SetLanguage" asp-route-culture="en" asp-route-returnUrl="@Uri.EscapeDataString(HttpContextAccessor.HttpContext.Request.Path + HttpContextAccessor.HttpContext.Request.QueryString)">
+                                                English
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a asp-area="Customer" asp-controller="Language" asp-action="SetLanguage" asp-route-culture="bn" asp-route-returnUrl="@Uri.EscapeDataString(HttpContextAccessor.HttpContext.Request.Path + HttpContextAccessor.HttpContext.Request.QueryString)">
+                                                Bangla
+                                            </a>
+                                        </li>
                                     </ul>
+
+                                   @*  <ul class="dropdown_language">
+                                        <li><a href="#" onclick="setLanguageAndReload('en');">English</a></li>
+                                        <li><a href="#" onclick="setLanguageAndReload('bn');">Bangla</a></li>
+                                    </ul> *@
+
                                 </li>
+
+
+
                                 @if (SignInManager.IsSignedIn(User))
                                 {
                                     <li class="top_links">
@@ -406,7 +426,15 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 
+    <script>
+       
+        function setLanguageAndReload(culture) {
+        
+            document.cookie = `Culture=${culture}; path=/;`;
 
+            location.reload();
+        }
+    </script>
     @section Scripts {
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js" integrity="sha384-XxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXxXx" crossorigin="anonymous"></script>
