--- a/Areas/Farmer/Views/FarmerShop/Shop.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/Shop.cshtml
@@ -579,18 +579,18 @@
 <hr />
 <h4>Shop Review and Rating</h4>
 
-@if (Model.FarmerShop.Reviews != null && Model.FarmerShop.Reviews.Any())
+@if (Model.ShopReviews != null && Model.ShopReviews.Any())
 {
-    @foreach (var review in Model.FarmerShop.Reviews)
+    @foreach (var review in Model.ShopReviews)
     {
         <div class="review">
             <div class="review-header">
                 <div class="profile-photo">
-                    @review.UserName.Substring(0, 1)
+                    @review.UserName
                 </div>
                 <div class="review-info">
                     <h4>@review.UserName</h4>
-                    <span>@review.ReviewDate.ToString("MMMM dd, yyyy")</span>
+                    <span>@review.ReviewDate.ToString()</span>
                 </div>
             </div>
             <div class="stars">
@@ -635,19 +635,22 @@ else
     }
 
     .profile-photo {
-        width: 50px;
-        height: 50px;
+        width: 60px;
+        height: 60px;
         border-radius: 50%;
-        background-color: #007bff;
-        color: #fff;
+        background-color: #0f0f;
+        color: #000;
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 1.5em;
-        margin-right: 15px;
+        font-size: 1.3em;
+        margin-right:15px;
+    
+      
     }
 
     .review-info {
+        margin-left:5px;
         display: flex;
         flex-direction: column;
     }
